--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,19 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+
+<home wx:if="{{active=='home'}}"></home>
+
+<classify wx:if="{{active=='classify'}}"></classify>
+<shopping wx:if="{{active=='shopping'}}"></shopping>
+<myself wx:if="{{active=='myself'}}"></myself>
+
+
+
+
+
+
+<van-tabbar active="{{ active }}" bind:change="onChange">
+  <van-tabbar-item name="home" icon="home-o">首页</van-tabbar-item>
+  <van-tabbar-item  name="classify"  icon="search">分类</van-tabbar-item>
+  <van-tabbar-item  name="shopping" icon="cart-o">购物车</van-tabbar-item>
+
+  <van-tabbar-item name="myself"  icon="user-o">我的</van-tabbar-item>
+</van-tabbar>
