--- a/pages/home/home/home.wxml
+++ b/pages/home/home/home.wxml
@@ -1,7 +1,7 @@
 <!-- <van-search value="{{ value }}" placeholder="请输入搜索关键词" />   -->
 
-<view style="display:none">
-  <image wx:for="{{images}}" wx:key="id" id="{{item.id}}" src="{{item.pic}}" bindload="onImageLoad"></image>
+<view style="display:none;">
+  <image style="border:solid 1rpx;" wx:for="{{images}}" wx:key="id" id="{{item.id}}" src="{{item.pic}}" bindload="onImageLoad"></image>
 </view>
 <scroll-view scroll-y="true" style="height:{{scrollH}}px" bindscrolltolower="loadImages">
 
@@ -15,18 +15,18 @@
 </swiper>
 
 
-  <view style="width:100%">
+  <view style="width:100%;border:solid 1rpx;">
     <view class="img_item">
     <block wx:for="{{col1}}" wx:key="id">
-      <view  data-id="{{item.id}}" bindtap="toDetail">
+      <view style="border:solid 1rpx;margin-bottom:20rpx;" data-id="{{item.id}}" bindtap="toDetail">
         <image src="{{item.pic}}" style="width:100%;height:{{item.height}}px"></image>
-        <view style="margin-bottom:20rpx;">wobuhao</view>
+        <view >wobuhao</view>
       </view>
       </block>
     </view>
     <view class="img_item">
     <block wx:for="{{col2}}" wx:key="id">
-      <view data-id="{{item.id}}" bindtap="toDetail">
+      <view style="border:solid 1rpx;margin-bottom:30rpx;" data-id="{{item.id}}" bindtap="toDetail">
         <image src="{{item.pic}}" style="width:100%;height:{{item.height}}px"></image>
         <view>nihao</view>
       </view>  
